# mcp-quick-start

./: README.md  dotenv.tpl  pyproject.toml
google-adk/: agent.py
huggingface-smolagents/: research_paper_analysis.py  test-text2sql.py
langgraph/: test-basic.py
mcp/: clinical_trial.py  pubmed.py
microsoft-autogen/: research_paper_analysis.py  test-basic.py  test-mcp.py  test-streaming.py  test-team-research.py  test-team-selector.py  test-team.py
openai-agent-sdk/: main.py
