[project]
name = "mcp-quick-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.5.3",
    "autogen-ext[openai]>=0.5.3",
    "autogenstudio>=0.1.5",
    "dateparser>=1.2.1",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "mcp>=1.6.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.75.0",
    "openai-agents>=0.0.11",
    "requests>=2.32.3",
    "smolagents[telemetry]>=1.14.0",
    "sqlalchemy>=2.0.40",
    "xmltodict>=0.14.2",
]
