[project]
name = "mcp-quick-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.5.3",
    "autogen-ext[openai]>=0.5.3",
    "dateparser>=1.2.1",
    "duckduckgo-search>=8.0.1",
    "fastapi>=0.115.12",
    "google-adk>=0.2.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.31",
    "litellm>=1.67.0",
    "markdownify>=1.1.0",
    "mcp>=1.6.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.75.0",
    "openai-agents>=0.0.11",
    "openinference-instrumentation-autogen>=0.1.8",
    "opentelemetry-sdk>=1.32.1",
    "requests>=2.32.3",
    "smolagents[mcp,telemetry]>=1.14.0",
    "sqlalchemy>=2.0.40",
    "xmltodict>=0.14.2",
]
